import { render, screen, fireEvent } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Menubar } from './menubar';

describe('Menubar', () => {
  const renderBasicMenubar = (props = {}) => {
    return render(
      <Menubar data-testid="menubar" {...props}>
        Test content
      </Menubar>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicMenubar();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches disabled state snapshot', () => {
      const { container } = renderBasicMenubar({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches checked state snapshot', () => {
      const { container } = renderBasicMenubar({ checked: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches active state snapshot', () => {
      const { container } = renderBasicMenubar({ active: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicMenubar();
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

  });




  describe('States', () => {
    it('handles disabled state correctly', () => {
      renderBasicMenubar({ disabled: true });
      const element = screen.getByTestId('menubar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for disabled state
    });
    it('handles checked state correctly', () => {
      renderBasicMenubar({ checked: true });
      const element = screen.getByTestId('menubar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for checked state
    });
    it('handles active state correctly', () => {
      renderBasicMenubar({ active: true });
      const element = screen.getByTestId('menubar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for active state
    });
  });





  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicMenubar();
      const element = screen.getByTestId('menubar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicMenubar();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicMenubar();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicMenubar({ className: 'custom-class' });
      const element = screen.getByTestId('menubar');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicMenubar({ ref });
      // Ref forwarding test - environment dependent
    // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicMenubar({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('menubar');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicMenubar({ children: undefined });
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicMenubar({ children: null });
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicMenubar({ className: '' });
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicMenubar({ className: 'class1' });
      rerender(<Menubar data-testid="menubar" className="class2" />);
      const element = screen.getByTestId('menubar');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Menubar data-testid="menubar">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Menubar>
      );
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Menubar data-testid="menubar">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Menubar>
      );
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicMenubar();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicMenubar();
      unmount();
      renderBasicMenubar();
      expect(screen.getByTestId('menubar')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
